--- a/category.html
+++ b/category.html
@@ -14,7 +14,6 @@
         <li><a href="category.html">Category</a></li>
         <li><a href="BodyKits.html">Body kits</a></li>
         <li><a href="Discks.html">Disks</a></li>
-        <li><a href="">Auto</a></li>
       </ul>
     </li>
     <li><a href="" class="down">Projects</a>
@@ -58,8 +57,8 @@
     </label>
 </div>
 
-<font size="7" face="Luminari" color="white">
-<table width="100%" align="center" border="0" bgcolor="grey" background="t.png">
+<font size="4" face="mv boli" color="white">
+<table width="100%" align="center" border="0" bgcolor="grey" background=".png">
   <tr>
     <td height="350" align="center" width="33%">
       Accessories
