--- a/project3.html
+++ b/project3.html
@@ -11,10 +11,9 @@
     <li><a href="About.html">About</a></li>
     <li><a href="" class="down">Product</a>
       <ul class="submenu">
-        <li><a href="">Category</a></li>
-        <li><a href="">Body kits</a></li>
-        <li><a href="">Disks</a></li>
-        <li><a href="">Auto</a></li>
+        <li><a href="category.html">Category</a></li>
+        <li><a href="BodyKits.html">Body kits</a></li>
+        <li><a href="Disks.html">Disks</a></li>
       </ul>
     </li>
     <li><a href="" class="down">Projects</a>
